# AoC2023-py

./: .cspell.json  .flake8  day1.py  pyproject.toml
src/: aoc2023.py  day01.py  day04.py  day1.py  day2.py  day4.py
tests/: test_day01.py  test_day02.py  test_day04.py  test_day1.py  test_day2.py  test_day4.py
